--- a/arch/arm64/configs/KharaMe_defconfig
+++ b/arch/arm64/configs/KharaMe_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-KharaMe5Pro"
+CONFIG_LOCALVERSION="Snap"
 CONFIG_PRODUCT_REALME=y
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
@@ -96,11 +96,13 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPU_BOOST is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_NET=y
 CONFIG_PACKET=y
