--- a/arch/arm64/configs/KharaMe_defconfig
+++ b/arch/arm64/configs/KharaMe_defconfig
@@ -123,6 +123,9 @@ CONFIG_SYN_COOKIES=y
 CONFIG_NET_IPVTI=y
 CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
+CONFIG_MSM_MPDEC=y
+CONFIG_MSM_CPU_FREQ_MAX=2265600
+CONFIG_MSM_CPU_FREQ_MIN=300000
 CONFIG_INET_IPCOMP=y
 CONFIG_INET_UDP_DIAG=y
 CONFIG_INET_DIAG_DESTROY=y
