--- a/arch/arm64/configs/KharaMe_defconfig
+++ b/arch/arm64/configs/KharaMe_defconfig
@@ -94,6 +94,8 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_IDLE=y
+CONFIG_CPU_OVERCLOCK=y
+CONFIG_CPU_UNDERCLOCK=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
