--- a/drivers/cpuidle/governors/Makefile
+++ b/drivers/cpuidle/governors/Makefile
@@ -1,6 +1,9 @@
 #
 # Makefile for cpuidle governors.
 #
-
+# =e
+obj-y += yawn.o
+#
 obj-$(CONFIG_CPU_IDLE_GOV_LADDER) += ladder.o
 obj-$(CONFIG_CPU_IDLE_GOV_MENU) += menu.o
+
